<resources>
    <string name="app_name">FitnessAppProject</string>
    <string name="Flex">Flexibility Exercises </string>
    <string name="t_Flex1">Standing Hamstring Stretch</string>
    <string name="d_Flex1">The standing hamstring stretch targets the muscles at the back of your thighs, including the hamstrings and glutes. This exercise helps to increase flexibility and mobility in the hips, legs, and lower back. Tight hamstrings can cause lower back pain and can lead to difficulty in performing activities that involve bending or lifting. By regularly practicing this exercise, you can improve your posture, prevent injury, and reduce discomfort in the lower back and hips.\n</string>
    <string name="t_Flex2">Cobra Pose</string>
    <string name="d_Flex2">Cobra pose is a yoga stretch that targets the muscles in your lower back, chest, and shoulders. This exercise helps to improve spinal mobility, increase the flexibility of the back muscles, and relieve tension in the shoulders and neck. Regular practice of this pose can help to reduce back pain, improve posture, and increase energy and vitality.</string>
    <string name="t_Flex3">Seated Forward Fold\n</string>
    <string name="d_Flex3">The seated forward fold is an excellent stretch for the hamstrings, lower back, and hips. This exercise helps to improve flexibility in these areas and can also help to reduce tension and stress. Tight hamstrings can cause discomfort in the lower back and hips, leading to difficulty in performing daily activities. By regularly practicing this exercise, you can improve your posture, increase your range of motion, and reduce the risk of injury.</string>
    <string name="s_Jumping_Jacks">Jumping Jacks</string>
    <string name="t_Jumping_Jacks">Jumping jacks are a great way to get your heart rate up and improve your cardiovascular endurance. To perform this exercise, start with your feet together and your arms at your sides. Then, jump your feet out to the sides while simultaneously raising your arms above your head. Jump back to the starting position and repeat.</string>
    <string name="s_High_Knees">High Knees</string>
    <string name="t_High_Knees">High knees are another great cardio exercise that can improve your endurance and help you burn calories. To perform this exercise, stand with your feet hip-width apart and your arms at your sides. Then, lift one knee up towards your chest, while hopping on the other foot. Lower the lifted knee and repeat with the other leg.</string>
    <string name="s_Burpees">Burpees</string>
    <string name="t_Burpees">Burpees are a challenging cardio exercise that can work your entire body. To perform this exercise, start in a standing position, then drop down into a plank position. Do a push-up, then jump your feet back towards your hands and jump up into the air with your arms raised. Land softly and repeat the exercise.</string>
    <string name="Strength_Exercises">Strength Exercises</string>
    <string name="s_Deadlifts">Deadlifts</string>
    <string name="t_Deadlifts">Deadlifts are a compound exercise that targets the muscles of the lower back, hips, and legs. To perform a deadlift, stand with your feet shoulder-width apart and grip a barbell with both hands, palms facing down. Keeping your back straight, bend your knees and lower your hips until your thighs are parallel to the floor. Push through your heels and lift the barbell, keeping it close to your shins as you stand up. Pause at the top and then lower the barbell back down to the ground.</string>
    <string name="s_Bench_Press">Bench Press</string>
    <string name="t_Bench_Press">The bench press is a classic exercise that targets the chest, triceps, and shoulders. Lie on a flat bench with your feet flat on the floor and grip a barbell with both hands, palms facing away from you. Lower the barbell to your chest, keeping your elbows tucked in close to your body. Push the barbell back up to the starting position, straightening your arms fully at the top of the movement.</string>
    <string name="s_Squats">Squats</string>
    <string name="t_Squats">Squats are a compound exercise that targets the muscles of the lower body, including the quads, hamstrings, and glutes. Stand with your feet shoulder-width apart and grip a barbell with both hands, resting it on your shoulders. Keeping your back straight, bend your knees and lower your hips until your thighs are parallel to the floor. Push through your heels and lift the barbell, straightening your legs and returning to the starting position.</string>
    <string name="Cardio">Cardio Exercises</string>
</resources>